[gd_scene load_steps=7 format=2]

[ext_resource path="res://WindowContainer/themes/theme_windows10.tres" type="Theme" id=1]
[ext_resource path="res://WindowContainer/scripts/WindowContainer.gd" type="Script" id=2]
[ext_resource path="res://WindowContainer/scripts/WindowControls.gd" type="Script" id=3]
[ext_resource path="res://WindowContainer/icons/icon_minimize.svg" type="Texture" id=4]
[ext_resource path="res://WindowContainer/icons/icon_maximize.svg" type="Texture" id=5]
[ext_resource path="res://WindowContainer/icons/icon_close.svg" type="Texture" id=6]

[node name="WindowContainer" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
custom_constants/separation = 0
script = ExtResource( 2 )
controls = 7

[node name="TitleBar" type="PanelContainer" parent="."]
margin_right = 1024.0
margin_bottom = 26.0
rect_min_size = Vector2( 0, 26 )
mouse_filter = 1

[node name="TitleHbox" type="HBoxContainer" parent="TitleBar"]
margin_right = 1024.0
margin_bottom = 26.0
custom_constants/separation = 0

[node name="ContentInfo" type="HBoxContainer" parent="TitleBar/TitleHbox"]
margin_right = 891.0
margin_bottom = 26.0
size_flags_horizontal = 3
custom_constants/separation = 3

[node name="Icon" type="TextureRect" parent="TitleBar/TitleHbox/ContentInfo"]
margin_right = 25.0
margin_bottom = 26.0
rect_min_size = Vector2( 25, 0 )
expand = true

[node name="Title" type="Label" parent="TitleBar/TitleHbox/ContentInfo"]
margin_left = 28.0
margin_right = 28.0
margin_bottom = 26.0
mouse_filter = 1
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
valign = 1

[node name="Controls" type="MarginContainer" parent="TitleBar/TitleHbox"]
margin_left = 891.0
margin_right = 1024.0
margin_bottom = 26.0
mouse_filter = 1
custom_constants/margin_right = 5

[node name="Buttons" type="HBoxContainer" parent="TitleBar/TitleHbox/Controls"]
margin_right = 128.0
margin_bottom = 26.0
rect_min_size = Vector2( 76.83, 0 )
rect_pivot_offset = Vector2( -1187.4, 1.81277 )
custom_constants/separation = 1
alignment = 2
script = ExtResource( 3 )

[node name="Minimize" type="Button" parent="TitleBar/TitleHbox/Controls/Buttons"]
margin_right = 42.0
margin_bottom = 26.0
rect_min_size = Vector2( 17, 15 )
hint_tooltip = "Minimize"
focus_mode = 0
custom_constants/hseparation = 20
enabled_focus_mode = 0
icon = ExtResource( 4 )

[node name="Maximize" type="Button" parent="TitleBar/TitleHbox/Controls/Buttons"]
margin_left = 43.0
margin_right = 85.0
margin_bottom = 26.0
rect_min_size = Vector2( 15, 15 )
hint_tooltip = "Maximize"
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 5 )

[node name="Close" type="Button" parent="TitleBar/TitleHbox/Controls/Buttons"]
margin_left = 86.0
margin_right = 128.0
margin_bottom = 26.0
rect_min_size = Vector2( 15, 15 )
hint_tooltip = "Close"
focus_mode = 0
size_flags_stretch_ratio = 0.0
enabled_focus_mode = 0
icon = ExtResource( 6 )
